[package]
name = "ngtask_queue_basic"
version = "0.1.0"
edition = "2021"
authors = ["NGDeveloper125 <ngdeveloper@outlook.com>"]
description = "A trait-based abstraction layer for task queues with ID and category support"
repository = "https://github.com/NGDeveloper125/NGTaskQueue_Basic"
documentation = "https://docs.rs/ngtask_queue_basic"
readme = "README.md"
license = "MIT"
keywords = ["queue", "task-queue", "abstraction", "message-bus", "async"]
categories = ["concurrency", "api-bindings"]
rust-version = "1.70.0"

[dependencies]
ngtq = "0.1.0"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


